@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+include/global.h: Get rid of some warnings by making some "char*" "const char*"
+  in the Settings struct.
+Arvid Norlander 2009-02-06
+
 server/player.c: Make sure unpaid items are removed at death even on non-shop
   floors.
 Arvid Norlander 2009-02-06
